2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * daemon/Makefile.am: Install DBUS service file in a 
    manner more friendly to packagers. Fixes #339072
    
2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * daemon/seahorse-service-keyset.c:
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-key-model.c:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-unknown-source.c:
    * libseahorse/seahorse-unknown-source.h:
    * libseahorse/seahorse-key-properties.c: Automatically discover 
    keys in UID signatures. Bug #335417
    
2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-key-model.c (added):
    * libseahorse/seahorse-key-model.h (added): 
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h:
    * libseahorse/seahorse-recipients-store.c:
    * src/seahorse-key-manager-store.c: Factor out common code for 
    associating a key with a row in a GtkTreeStore
    
2006-04-18  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libseahorse/seahorse-pgp-key.c:
    * src/seahorse-key-properties.c: Fix problem with remote
    keys not showing up properly.
    
2006-04-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ldap-operation.c:
    * libseahorse/seahorse-transfer-operation.c:
    * libseahorse/seahorse-vfs-data.c:
    * libseahorse/seahorse-vfs-data.h:
    * libseahorse/seahorse-key-manager.c:
    * libseahorse/seahorse-keyserver-sync.c: Fix bugs with the 
    key syncing and publishing.
    
2006-04-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-progress.c: More operation related bug 
    fixes.
    
2006-04-18  Nate Nielsen  <nielsen@memberwebs.com>
