@@ -1,5 +1,10 @@
 2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-pgp-key.c: Map GPGME validity/trust
+    enum into seahorse properly.
+    
+2006-04-19  Nate Nielsen  <nielsen@memberwebs.com>
+
     * configure.in:
     * daemon/Makefile.am: Install DBUS service file in a 
     manner more friendly to packagers. Fixes #339072
